Fix overflow in app page

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,7 +10,10 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 100vh;
+  gap: 32px;
+  min-height: 100vh;
+  height: 100%;
+  padding: 16px;
 
   .text-areas {
     display: flex;
@@ -20,7 +23,7 @@
     padding: 16px;
     width: 800px;
   }
-  
+
   .text-box {
     width: 400px;
     padding: 16px;
